--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
